[package]
name = "travs"
version = "0.1.0"
authors = ["nrfrush"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoid = "0.3.0"
handlebars = "3.0.1"
serde_json = "1.0.52"
serde = "1.0.87"
serde_derive = "1.0.87"
once_cell = "1.3.1"
grpcio = { version = "0.4.4", features = ["openssl"] }
dgraph = { version = "0.3.1", default-features = false, features = ["dgraph-1-1"] }
failure = "0.1.7"
failure_derive = "0.1.7"
regex = "1.3.7"
bcrypt = "0.7.0"