[package]
name = "travs"
version = "0.1.0"
authors = ["nrfrush"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoid = "0.3.0"
handlebars = { version = "3.0.1", features = ["dir_source"] }
serde_json = "1.0.52"
serde = "1.0.87"
serde_derive = "1.0.87"
once_cell = "1.3.1"
grpcio = { version = "0.4.4", features = ["openssl"] }
dgraph = { version = "0.3.1", default-features = false, features = ["dgraph-1-1"] }
failure = "0.1.7"
failure_derive = "0.1.7"
regex = "1.3.7"
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-service = "1.0.0"
bytes = "0.5.2"
futures = "0.3.1"
env_logger = "0.7"
json = "0.12"
actix-http = "1.0.1"
rand = "0.7.3"
rust-argon2 = "0.5"
reqwest = { version = "0.10.4", features = ["json", "cookies"] }
csrf = "0.3.1"
data-encoding = "2.2.0"


